Update Chromium

Add dummy override for input-event source on X11, which we now
comment out in Chromium to avoid it  talking to X11 directly.

Changes:
7b8aa9b87a Fix not working bug black lists
cea17a5763 Do not export .gitignore and .gitattributes
260f8350e1 Fix Chromium built with X11 running without
42d8ea5645 FIXUP: Fix build with GCC 7.0
3d02dd98fb Use basic collection info only on linux

Task-number: QTBUG-55384
Change-Id: Ifcd0f39578d608b93687b869db2bbcc5c0a03fde
Reviewed-by: Michal Klocek <michal.klocek@qt.io>